Addin creation of EXE and setup script for InnoSetup.